app/assets/stylesheets/2015/base.css.scss
@import "compass";
@import "compass/reset";
@import '../lib/*';

@import 'colors';

@-ms-viewport{
    width: extend-to-zoom;
    zoom: 1.0;
}

@font-face {
    font-family: 'jellyka';
    src: font-url('jellyka_estrya.eot');
    src: font-url('jellyka_estrya.eot?#iefix') format('embedded-opentype'),
         font-url('jellyka_estrya.woff') format('woff'),
         font-url('jellyka_estrya.ttf') format('truetype'),
         font-url('jellyka_estrya.svg#jellyka_-_estryas_handwritiRg') format('svg');
    font-weight: normal;
    font-style: normal;
}

body {
	font-family: Helvetica, Arial, sans-serif;
	font-size: 12px;
	background: white no-repeat bottom center;
	padding-bottom: 80px;
	@include image-url-2x("crystals.png")
}

#staging {
	background-color: red;
	color: white;
	text-align: center;
	font-size: 1.4em;
}

.centered {
	text-align: center;
}

.error, #error_explanation li {
	color: red;
	font-size: 1.2em;
}

h1, h2, h3 {
	font-family: 'jellyka', Helvetica, Arial, sans-serif;
}

h1 {	
	font-size: 7em;
	line-height: 0.5em;
	padding-top: 0.2em;
}

h2 {
	font-size: 7em;
	line-height:0.5em;
}

h3 {
	font-size:5em;
}

h5 {
	color: $link_color;
	text-transform: uppercase;
	font-family: Helvetica, Arial, sans-serif;
	font-size: 11px;
	margin-top: 10px;
}

#intro h5 {
	font-size:14px;
}

p {
	line-height:1.5em;
	margin:10px 0;
}

a {
	color: $link-color;
	text-decoration:none;
	&:hover {
		text-decoration: none;
		color:#a90a0d;
	}
}

aside#ticketdrop {
	background-color:#dedede;
	border-radius:50%;
	width:60px;
	height:60px;
	display:block;
	position:fixed;
	right:10px;
	top:10px;
	z-index:20;
	img {
		margin:12px auto;
		display:block;
		width:65%;		
	}
	p {
		text-align: center;
	}

	a {
		color: black;
	}
}

header {
	display:block;
	margin:0 auto;
	width:100%;
	max-width:960px;
	margin-top:0px;

	img {
		max-width:170px;
		display:block;
		left:30px;
		right:30px;
		height:80px;
		float:left;
	}

	form {
		z-index: -1;
	}

	&:after {
		clear:both;
		content:" ";
		visibility:hidden;
		display:block;
		height:0;
	}
}

#login_widget {
	display:block;
	margin:0;
	font-family:Helvetica, Arial, sans-serif;
	font-size:12px;
	color:black;
	position:relative;
	text-align: right;

	div {
		display: inline-block;
	}

	input {
		width: 150px;
		height:30px;
		margin:0 auto;
		margin-top:15px;
		border:1px solid #dedede;
		padding-left:10px;
		background-color:white;
		color:#F7583E;
		@include border-radius(20px 0px);
		&[type=submit] {
			width: 100px;
			padding-left: 6px;
			margin-left: 10px;
		}
	}

	label:nth-child(2) {
		margin-left:30px;
	}

	label {
		text-align:center;
		margin:28px 5px 0 15px;
		font-size:14px;	
	}

	p {
		position:absolute;
		right:0px;
		top:45px;
	}
}

section {
	clear:both;
	width:100%;
	height:100%;
	margin:0px 0 0 0;
	background-color:#f2f2f2;
}

article {
	display:block;
	margin:0 auto;
	width:100%;
	height:100%;
	max-width:960px;
	padding:50px 0;

	div {
		margin:0 auto;
		display:inline-block;
		vertical-align:top;
		position:relative;
	}

	#ruby {
		border-radius:50%;
		background-color:#dedede;
		width:250px;
		height:250px;

		img {
			display:block;
			margin:0 auto;
			width:90%;
			top:18%;
			position:relative;
		}
	}

	#intro {
		width:60%;
		margin:60px 0 0 40px;

		a {
			color:#E10F12;
			text-decoration:none;
			margin:0 10px;

			&:first-of-type {
				margin:0 10px 0 0;				
			}
		}

		p {
			margin-bottom: 20px;
		}

		h2 {
			margin-bottom: 30px;
		}

	}

}

#guests {
	text-align:center;
}

.guests {
	width:236px;

	p, h3 {
		padding: 0 35px;
		text-align: center;
	}

	h3 {
		line-height: 0.6em;
		margin-bottom:20px;
	}

	img {
		margin: 0 auto;
		display: block;
		border-radius:20px 0px;
	}

	img:last-of-type {
		margin-top:30px;
	}

	a {
		h2 {
			color: black;
		}
		&:hover {
			text-decoration: none;
		}
	}
}

#container {
	width:100%;
	background-image:image-url("bg.png");
	background-repeat:no-repeat;
	background-position:right;
	z-index:0;

	.error {
		text-align: center;
	}
}

.dark {
	background-color:rgba(0, 0, 0, 0.5);

	article {
		p, h2 {
			color:white;
			text-align:center;
			margin-bottom:20px;
		}


		div {
			width:135px;
			height:135px;
			background-color:none;
			margin:1px;
			color:black;
			text-align:right;
			font-size:21px;

			p {
				color: black;
				font-size: 12px;
				margin-top: 50px;
			}

		}

		a {
			color: black;
			text-decoration: none;
		}


	}
}

.sq1 {
	background-image:image-url("bg1.png");
	background-repeat: no-repeat; 
	background-position:bottom left;
}
.sq2 {
	background-image:image-url("bg2.png");
	background-repeat: no-repeat; 
	background-position:bottom left;
}
.sq3 {
	background-image:image-url("bg3.png");
	background-repeat: no-repeat; 
	background-position:bottom left;
}
.sq4 {
	background-image:image-url("bg4.png");
	background-repeat: no-repeat; 
	background-position:bottom left;
}

button {
	margin:30px auto;
	display:block;
	width:200px;
	height:33px;
	border:0;
	font-family: Helvetica, Arial, sans-serif;
	font-size:12px;
	color:#e10f12;
	background-color:black;
	border-radius:20px 0px;
	position:relative;
	cursor:pointer;

	img {
		width:20px;
		display:inline;
		position: absolute;
    	right: 20px;
    	bottom:6px;
	}
}


#events {
	margin-bottom:20px;

	h2 {
		text-align:center;
		margin:0px 0 40px 0;
	}

	div {
		width: 100%;
		position: relative;

		div:nth-child(2n) {
			width: auto;
			height:auto;
			margin:0 20px 0px 0px;
			box-sizing:border-box;
		    -moz-box-sizing:border-box;
		    -webkit-box-sizing:border-box;
			padding:20px;

			h3 {
				font-family: helvetica, Arial, sans-serif;
				font-size: 1.5em;
				margin-top: -15px;
			}

			h5 {
				padding:0px;
				margin-top:10px;
				font-variant:small-caps;
			}

		}

		div:nth-child(2n+1) {
			width: auto;
			text-align: center;
			width: 288px;
			height: 111px;
			background-color:#dedede;
			margin:0 0px 20px 20px;
			border-radius:50px 0 50px 0;
			overflow:hidden;
		}

		div {

			p {
				margin-right:100px;
			}

			div h3 {
				font-family:helvetica, Arial, sans-serif;
				font-size:1.5em;
				margin-top:-15px;
			}
		}
	}

	aside img {
		height:70px;
		width:auto;
		position:absolute;
		right:0px;
		top:25%;
	}

	&:after {
		clear:both;
		content:" ";
		visibility:hidden;
		height:0;			
	}
}

strong {
	font-weight:bold;
}

#contact {
	h2 {
		text-align:center;
		margin-bottom:20px;
	}

	div {
		width:100%;
		max-width:220px;
		color:black;
		padding:20px;
		margin:20px;
		margin-top:0px;
		border-radius:20px 0px;
		background-color:none;
		position:relative;

		p {
			padding:10px;
			margin:0px;
			color:black;
			line-height:2em;
		}

		.bolded {
			font-weight:bold;
			font-size:14px;
			color:black;
		}
	}

	strong {
		font-weight: bold;
	}

	img {
		width:60px;
		float:left;
		margin-right:20px;
	}
}

#contact > div:first-of-type {
	background:#cdcdcd;
}

#moretickets {
	width:100%;
	display:none;
	margin-bottom:30px;
	height:auto;
}

#tickets {
	p, p small {
		text-align:center;
		font-size:18px;		
	}

	p small {
		font-size:10px;
		color:#999;		
		span {
			font-size:24px;
			color:#888;			
		}
	}

	span {
		font-size:30px;
		color:#e10f12;
		padding-left:5px;
		padding-right:5px;		
	}
}

h6 {
	font-size:12px;
}

section.content {
	background: none;

	article {
		div {
			display: block;
		}

		h2 {
			margin-top: 20px;
			padding-top: 20px;
			padding-bottom: 20px;
			border-top: #e10f12 dotted 3px;
		}

		enbox a {
			margin-right: 20px;
			font-size: 14px;
		}

		button {
			background-color: #e10f12;
			color: white;
			font-weight: bold;
			font-size: 14px;

		  &[type=submit] {
				width: 200px;
				height: 25px;
				text-align: center;
				margin: 20px;
				@include border-radius(20px 0);
				color: #E10F12;
				border: #dedede;
			}
		}

		ul {
			li {
				font-size: 14px;
				line-height: 1.5em;
			}
		}

		table {
			margin-top: 20px;

			th {
				font-weight: bold;
				font-size: 18px;
			}

			tr {
				border-bottom: black dotted 1px;
				&:first-of-type {
					border-bottom: black solid 1px;
				}
				min-height: 20px;
				td {
					padding: 10px 0;
				}
				button {
					margin: 5px auto;
				}
			}
		}

		label {
			font-size: 14px;
		}

		h1 {
			margin-bottom: 20px;
		}

		h6 {
			font-size: 18px;
			font-weight: bold;
			margin-top: 20px;
		}
	}
}


@media only screen and (min-width:641px) and (max-width:1130px) {
	header {
		height: auto;
		position:relative;
		img {
			position:absolute;
			top:50%;
			margin-top:-40px;
		}
	}
	
	article {
		#intro {
			margin-top:5%;

		}

		#ruby {
			width:33%;
			height:auto;
			padding-top:4.5%;
			padding-bottom:4.5%;
			max-width:250px;
		}
	}


	#login_widget {
		margin-right: 100px;

		div {
			display: block;
		}

		input {
			margin-top: 5px;
		}
	}

	#guests {
		text-align:center;
	}
	
	#contact {
		text-align:center;
		div a img {
			margin-left:24px;
			height:auto;
		}
	}
	
	#contact > div:last-of-type {
		padding-top:0px;
	}
}

@media only screen and (max-width:640px) {
	body {
		background-size:100%;
	}

	#login_widget {
		display: none;
	}
	
	#container {
		background-position:top 720px right;
		background-size:100%;
	}
	
	header img {
		float:none;
		margin:20px auto;
		#login_widget {
			clear:both;
			label {
				margin:10px auto;
			}
			p {
				text-align:center;
				position:relative;
				top:0px;
			}
			label:nth-child(2) {
				margin:10px auto;
			}
		}
	}
	
	header #login_widget input, #login_widget label {
		clear:both;
		margin:0px auto;
		float:none;
		position:relative;
		text-align:center;
	}
	
	h6 {
		font-size:10px;
	}
	
	article {
		#ruby {
			display:none;
		}
		#intro {
			margin:40px 0px 20px 0;
			width:100%;
			p span {
				display:none;
			}
			h5 {
				text-align:center;
				margin-bottom:10px;
			}
		}
	}
	
	section article {
		padding:0px;
	}
	
	article #intro p, article #intro h2 {
		margin:0 30px 20px 30px;
		text-align:center;
		.divider {
			display: none;
		}
	}
	

	article #intro p a, article #intro a:first-of-type {
		display:block;
		height:25px;
		margin:5px auto;
		background:#e10f12;
		color:white;
		border-radius:20px 0%;
		font-size:14px;
		padding-top:10px;
		max-width:300px;
	}
	
	article#guests, #events, #contact {
		padding:30px 0px;
	}
	
	#guests .guests {
		margin:0px auto 36px auto;
		float:none;
		width:100%;
		img.widescreen {
			display:none
		}
		img:last-of-type {
			width:25%;
			margin-top:10px;
		}
	}
	
	section.dark {
		padding:30px 0px 20px 0;
		p {
			padding:0 30px;
		}
	}
	
	#events {
		h2 {
			margin:0 0 30px 0;
		}

		div {
			div:nth-child(2n+1) {
				width:240px;
				margin:0px auto 20px auto;
				float:none;
				display:block;
			}
			div:nth-child(2n) {
				margin:0px auto;
				display:block;
				width:90%;
				padding:20px 20px 20px 0px;
			}
			div p {
				margin-bottom:15px;
				margin-right:50px;
			}
			aside img {
				height:40px;
				margin-top:10px;
			}
			#events {
				margin-bottom:0px;
				padding-bottom:0px;
			}
		}

	}
	
	#contact {
		div {
			margin:0 auto;
			display:block;
			a img {
				margin-left:24px;
				height:auto;
			}
		}
		padding-bottom:70px;

	}
	
	#contact > div:nth-last-child(2) p, #contact > div:nth-last-child(1) p {
		text-align:center;	
	}
	
	#contact > div:nth-last-child(2) {
		padding-bottom:0px;	
	}
	
	#contact > div:last-of-type {
		padding-top:0px;
	}
	
	#tickets p {
		padding:0 30px;
	}
	
}

